<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingConstraints"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/pageMargin"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/toopBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/light_text"
            android:text="@string/register_or_log_in"
            android:textSize="@dimen/mainHeading"
            android:fontFamily="@font/os_font_regular"/>


        <TextView
            android:id="@+id/txtLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_otp"
            android:textStyle="bold"
            android:textColor="@color/light_text"
            android:textSize="@dimen/subHeading"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/bahnschrif" />

            <com.poovam.pinedittextfield.SquarePinField
                android:id="@+id/txtOtp"
                android:layout_width="@dimen/_180sdp"
                android:layout_height="@dimen/pinBox"
                android:background="@color/colorTransparent"
                android:inputType="number"
                android:textColor="@color/light_text"
                android:textSelectHandle="@drawable/text_handle"
                android:textSize="@dimen/editTextSize"
                app:distanceInBetween="7dp"
                app:bottomTextPaddingDp="15dp"
                app:fieldColor="@color/hash"
                app:highlightColor="@color/accent_color"
                app:highlightType="currentField"
                app:isCursorEnabled="false"
                app:isCustomBackground="true"
                app:lineThickness="2dp"
                app:noOfFields="4"
                app:cornerRadius="10dp"
                android:hint="****"
                android:layout_marginTop="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/code_send_again"
                android:layout_marginTop="15dp"
                android:textSize="@dimen/bodyText"
                android:textColor="@color/light_text"
                android:fontFamily="@font/open_sans"/>
        <TextView
            android:id="@+id/btSendAganin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_otp_again"
            android:textColor="@color/accent_color"
            android:textSize="@dimen/linkText"
            android:fontFamily="@font/open_sans"
            android:layout_marginTop="10dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btConfirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/buttonHeight"
            android:background="@drawable/ic_bg_graident_bt"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/open_sans"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="@dimen/buttonText"
            />


    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>