<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="MissingConstraints"
    android:padding="@dimen/pageMargin"
    android:background="@drawable/bg_white">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/delet_card"
        android:textSize="@dimen/mainHeading"
        android:fontFamily="@font/os_font_regular"
        android:textColor="@color/light_text"
        android:layout_marginTop="@dimen/_10sdp"/>
    <TextView
        android:id="@+id/txtDes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btCancel"
        android:text="@string/delet_settile_note"
        android:layout_marginTop="@dimen/_5sdp"
        android:textSize="@dimen/bodyBoldText"
        android:fontFamily="@font/open_sans"
        android:textColor="@color/light_text"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btCancel"
        android:layout_width="0dp"
        android:layout_height="@dimen/buttonHeight"
         android:background="@drawable/bg_blue_line_box"
        android:text="@string/cancel"
        android:textColor="@color/accent_color"
        android:fontFamily="@font/open_sans"
        android:textStyle="bold"
        android:textSize="@dimen/_13sdp"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/txtDes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btDelete"
        android:layout_marginEnd="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_20sdp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btDelete"
        android:layout_width="0dp"
        android:layout_height="@dimen/buttonHeight"
         android:background="@drawable/bg_blue_bt"
        android:text="@string/delete"
        android:textColor="@color/white"
        android:fontFamily="@font/open_sans"
        android:textSize="@dimen/buttonText"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/txtDes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btCancel"
        android:layout_marginStart="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_20sdp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>